# packages/api/docs/api/openapi.yaml
@@ -3643,15 +3643,23 @@ paths:
                       type: string
                       format: date-time
                       description: Creation timestamp
-                    issueCount:
+                    memoCount:
                       type: integer
-                      description: Number of non-deleted issues with this label
+                      description: Number of non-deleted memos with this label
+                    taskCount:
+                      type: integer
+                      description: Number of non-deleted tasks with this label
+                    articleCount:
+                      type: integer
+                      description: Number of non-deleted articles with this label
                   required:
                     - id
                     - name
                     - description
                     - createdAt
-                    - issueCount
+                    - memoCount
+                    - taskCount
+                    - articleCount
                   additionalProperties: false
         "400":
           description: Default Response
